# C-exercises-

./: CMakeLists.txt  main.cpp
arrays/: 01_reverse_array.cpp  01_shift_left.cpp  02_compact.cpp  03_swap.cpp  04_coincide.cpp  05_shiftleft.cpp  06_mostfrequent.cpp  07_palindrome.cpp  08_getzerosubsequences.cpp  09_norepetitions.cpp  10_rotate.cpp  11_subsequencestargetsum.cpp
strings/: 01_find_longest_word_length.cpp  02_reversestring.cpp  03_reversestringv2.cpp  04_removedoublestring.cpp  05_anagrams.cpp
