cmake_minimum_required(VERSION 4.0)
project(esami_c__)

set(CMAKE_CXX_STANDARD 20)

add_executable(esami_c__ main.cpp)
add_executable(shift_left arrays/01_reverse_array.cpp)
add_executable(compact arrays/02_compact.cpp)
add_executable(swap arrays/03_swap.cpp)
add_executable(coincide arrays/04_coincide.cpp)
add_executable(shiftleft arrays/05_shiftleft.cpp)
add_executable(mostfrequent arrays/06_mostfrequent.cpp)
add_executable(palindrome arrays/07_palindrome.cpp)
add_executable(zerosubsequences arrays/08_getzerosubsequences.cpp)
add_executable(norepetitions arrays/09_norepetitions.cpp)
add_executable(longestwordlength strings/01_find_longest_word_length.cpp)
add_executable(reversestring strings/02_reversestring.cpp)
add_executable(rotate arrays/10_rotate.cpp)

